<resources>
    <string name="app_name">ProductBrowser</string>
    <string name="product_brand">Бренд:</string>
    <string name="product_price">Цена:</string>
    <string name="product_category">Категория:</string>
    <string name="try_again">Попоробовать снова</string>
    <string name="load_error">Ошибка загрузки</string>
    <string name="search_text">Поиск:</string>
    <string name="network_error_message">Нет подключения к сети</string>
    <string name="toast_load_error_message">Ошибка загрузки</string>
    <string name="product_rating">Рейтинг:</string>
    <string name="product_stock">Штук в наличии:</string>
    <string name="product_discount_percentage">Скидка:</string>
    <string name="product_percentage_symbol">%</string>
    <string name="product_dollar_price_symbol">$</string>
    <string name="list_load_error">При загрузке списка возникла ошибка, проверьте сеть и попробуйте обновить список</string>
    <string name="empty_search_message">Ничего не найдено, попробуйте снова</string>
</resources>